# hw07-group25

./: .buildinfo  Main.ipynb  Makefile  Notebook.ipynb  NotebookNina.ipynb  RCDCFundingSummary_05042022.csv  README.html  README.md  _config.yml  _toc.yml  conf.py  environment.yml  genindex.html  hw07-description.html  hw07-description.md  main.html  main.ipynb  objects.inv  pyproj.toml  search.html  searchindex.js  setup.cfg  test_functions.py
.doctrees/: README.doctree
.doctrees/.pytest_cache/: README.doctree
.ipynb_checkpoints/: main-checkpoint.html
.pytest_cache/: README.html
_build/html/: .buildinfo  hw07-description.html
_build/html/.doctrees/: environment.pickle  hw07-description.doctree  main.doctree
_build/html/_sources/: main.ipynb
_build/html/nih/_build/.doctrees/: intro.doctree  markdown.doctree
_build/html/nih/_build/jupyter_execute/: notebooks.ipynb
_build/jupyter_execute/: main.ipynb  main.py
_sources/: README.md
data/cleaned_data/: funding_data.hdf5  funding_data_2019.hdf5  funding_data_MP_removed.hdf5  funding_data_MP_removed_long.hdf5
data/raw_data/: funding_data.csv
data_updated/cleaned_data/: funding_data_MP_removed.hdf5
functiontools/: functions.py
functiontools/test/: test_functions.py
nih/_build/.doctrees/: environment.pickle  notebooks.doctree
nih/_build/html/: notebooks.html  searchindex.js
