[metadata]
name             = nih spending
#version          = attr: functiontools.__version__
author           = National Institute of Health, Madeline Adee, Tina Li, and Nina Dickens
author_email     = ninadickens@berkeley.edu, tina.li@berkeley.edu, m.adee@berkeley.edu
description      = Repro for NIH
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, toys
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7.18,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*